--- a/cukes-for-android/pom.xml
+++ b/cukes-for-android/pom.xml
@@ -16,17 +16,17 @@
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-core</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0.RC10</version>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-picocontainer</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0.RC10</version>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0.RC10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.picocontainer</groupId>
